<?xml version="1.0" encoding="UTF-8"?>
<!--**************************************************************************|
 |                                                                            |
 |   Author :  Galo Paz <galopaz@outlook.com>                                 |
 |     Date :  Jul 15, 2013                                                   |
 |     Name :  scores_layout.xml                                              |
 |  Purpose :  Layout for viewing scores, utilizes a TableView to accomplish  |
 |             a uniform look.                                                |
 |                                                                            |
 |***************************************************************************-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
   android:padding="8dp">
   <LinearLayout android:id="@+id/btn_scores_layout"
      android:layout_alignParentBottom="true"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@android:drawable/bottom_bar"
      android:gravity="center_vertical">
      <Button android:id="@+id/btn_scores_return"
         android:layout_width="match_parent"
         android:layout_weight="1.0" 
         android:layout_height="wrap_content" 
         android:onClick="returnToMain"
         android:text="@string/btn_return" 
      />
   </LinearLayout>
   <ScrollView 
      android:id="@+id/scroller"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true" 
      android:layout_alignParentTop="true"
      android:layout_above="@id/btn_scores_layout">
      <TableLayout  
         xmlns:android="http://schemas.android.com/apk/res/android"  
         android:id="@+id/tableLayout1"  
         android:layout_width="match_parent"  
         android:layout_height="match_parent"  
         android:shrinkColumns="*"  
         android:stretchColumns="*">  
         <TableRow  
            android:id="@+id/title_row"  
            android:layout_height="wrap_content"  
            android:layout_width="match_parent"  
            android:gravity="center_horizontal">  
            <TextView  
               android:id="@+id/table_title"  
               android:layout_width="match_parent"  
               android:layout_height="wrap_content"  
               android:textStyle="bold"  
               android:typeface="serif"  
               android:textSize="18dp"  
               android:text="@string/table_name"  
               android:gravity="center"  
               android:textColor = "@android:color/white"
               android:layout_span="5"
            />  
         </TableRow>  
         <TableRow  
            android:id="@+id/label_row"  
            android:layout_height="wrap_content"  
            android:layout_width="match_parent">  
            <TextView 
               android:id="@+id/number_label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center" 
               android:text="@string/position_label"
               android:textStyle="bold"  
               android:typeface="serif"
               android:textColor = "@android:color/white"
            />
            <TextView  
               android:id="@+id/player_label"
               android:gravity="center"
               android:text="@string/player_label"
               android:textStyle="bold"  
               android:typeface="serif"
               android:textColor = "@android:color/white"
            />  
            <TextView  
               android:id="@+id/ratio_label"  
               android:gravity="center"
               android:text="@string/ratio_label"  
               android:textStyle="bold"  
               android:typeface="serif"
               android:textColor = "@android:color/white"
            />  
            <TextView  
               android:id="@+id/score_label"
               android:gravity="center"  
               android:text="@string/score_label"  
               android:textStyle="bold"  
               android:typeface="serif"
               android:textColor = "@android:color/white"
            />  
            <TextView  
               android:id="@+id/time_label"
               android:gravity="center"  
               android:text="@string/time_label"  
               android:textStyle="bold"  
               android:typeface="serif"
               android:textColor = "@android:color/white"
            />  
         </TableRow>
      </TableLayout>
   </ScrollView>
</RelativeLayout>