<?xml version="1.0" encoding="UTF-8"?>
<!--**************************************************************************|
 |                                                                            |
 |   Author :  Galo Paz <galopaz@outlook.com>                                 |
 |     Date :  Jul 14, 2013                                                   |
 |     Name :  game_layout.xml                                                |
 |  Purpose :  Layout for gameplay, utilizes a ScrollView within a            |
 |             RelativeLayout to help position and fit all components.        | 
 |                                                                            |
 |***************************************************************************-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
   android:padding="8dp">
   <LinearLayout android:id="@+id/info_layout"
      android:layout_alignParentTop="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView android:id="@+id/playing_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center"
         android:text="USERNAME"
      />
      <TextView android:id="@+id/score"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:visibility="invisible"
         android:text="9/10 Correct"
         android:textColor="@color/green"
      />
      <Chronometer android:id="@+id/time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center"
      />
   </LinearLayout>
   <TextView android:id="@+id/instructions"
      android:layout_below="@id/info_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="12sp"
      android:textStyle="bold|italic"
      android:text="@string/instructions"
   />
   <LinearLayout android:id="@+id/btn_layout"
      android:layout_alignParentBottom="true"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@android:drawable/bottom_bar"
      android:gravity="center_vertical">
      <Button android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_weight="1.0" 
         android:layout_height="wrap_content" 
         android:onClick="submit"
         android:text="@string/btn_submit" 
      />
   </LinearLayout>
   <ScrollView 
      android:id="@+id/scroller"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true" 
      android:layout_below="@id/instructions"
      android:layout_above="@id/btn_layout">
      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state0"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital0"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state1"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state2"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital2"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state3"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital3"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state4"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital4"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state5"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital5"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state6"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital6"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state7"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital7"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state8"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital8"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/question_padding"
            android:paddingBottom="@dimen/question_padding">
            <TextView  
               android:id="@+id/state9"
               android:layout_width="0dp" 
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/state_weight" 
               android:textAppearance="?android:attr/textAppearanceSmall" 
            />
            <AutoCompleteTextView
               android:id="@+id/capital9"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="@dimen/capital_weight"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@android:color/black"
            />
         </LinearLayout>
         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color"
            android:layout_marginTop="@dimen/bar_margin"
            android:layout_marginBottom="@dimen/bar_margin" 
         />
         <TextView  
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
         android:paddingBottom="6dip"
         android:text="@string/end_instructions" />
      </LinearLayout>
   </ScrollView>
</RelativeLayout>